@@ -1,4 +1,4 @@
-// $Id: config.w32,v 1.3 2004/04/14 13:56:18 edink Exp $
+// $Id: config.w32,v 1.4 2004/07/20 05:26:33 pollita Exp $
 // vim:ft=javascript
 
 ARG_WITH("bz2", "BZip2", "no");
@@ -6,7 +6,7 @@ ARG_WITH("bz2", "BZip2", "no");
 if (PHP_BZ2 != "no") {
 	if (CHECK_LIB("libbz2.lib", "bz2", PHP_BZ2) &&
 			CHECK_HEADER_ADD_INCLUDE("bzlib.h", "CFLAGS_BZ2")) {
-		EXTENSION("bz2", "bz2.c");
+		EXTENSION("bz2", "bz2.c bz2_filter.c");
 		AC_DEFINE('HAVE_BZ2', 1, 'Have BZ2 library');
 		// BZ2 extension does this slightly differently from others
 		if (PHP_BZ2_SHARED) {
